package org.example.board;

public class Tuzdyks {
    public static final int WHITE_TUZDYK = 0;
    public static final int BLACK_TUZDYK = 1;

    private final int[] tuzdyks;
}